[list] fix: lists position next to atomic blocks with alignment

--- a/packages/editor/web/statics/styles/rich-content-editor-alignment.rtlignore.scss
+++ b/packages/editor/web/statics/styles/rich-content-editor-alignment.rtlignore.scss
@@ -1,5 +1,6 @@
 /*!rtl:ignore*/
 .left {
+  text-align: left !important;
   &>* {
     /*!rtl:ignore*/
     text-align: left !important;
@@ -7,6 +8,7 @@
 }
 
 .center {
+  text-align: center !important;
   &>* {
     text-align: center !important;
   }
@@ -14,6 +16,7 @@
 
 /*!rtl:ignore*/
 .right {
+  text-align: right !important;
   &>* {
     /*!rtl:ignore*/
     text-align: right !important;
